--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -4,20 +4,22 @@ description: How Shuttle accounts work
 icon: user
 ---
 
-## Account Tiers
-
-There are three Shuttle account tiers: Community, Pro, and Team.
-Check the [Pricing page](https://www.shuttle.dev/pricing) for more information.
+To use Shuttle, create an account by signing in to the [Shuttle Console](https://console.shuttle.dev/).
 
 ## Login providers
 
-You can create Shuttle accounts with the following providers:
+You can create Shuttle accounts with the following authentication providers:
 
 - GitHub
 - Google
 - Email + password (via Auth0)
 
 Accounts on different providers with matching emails are not automatically linked and are treated as separate accounts.
+
+## Account Tiers
+
+There are three Shuttle account tiers: Community, Pro, and Team.
+Check the [Pricing page](https://www.shuttle.dev/pricing) for more information.
 
 ## API Key
 
