--- a/docs/local-run.mdx
+++ b/docs/local-run.mdx
@@ -71,7 +71,7 @@ background = false
 on_change_strategy = "kill_then_restart"
 kill = ["pkill", "-TERM", "-P"]'
 ```
-Bacon works with jobs and this command tells bacon to run a job called `shuttle` which we define as the other argument within single quotes.
+Bacon works with jobs and this command tells bacon to run a job called `shuttle` which we define in the inline toml file within single quotes.
 The job tells bacon to execute `shuttle run` when you save a file.
 There are many other helpful options, see `bacon --help` or the [bacon website](https://dystroy.org/bacon/) for more info.
 
