chore: shuttle.rs cleanup

--- a/_snippets/binaries.mdx
+++ b/_snippets/binaries.mdx
@@ -1,9 +1,8 @@
 <Warning>
 After installation, you will have two commands: `shuttle` and `cargo shuttle`.
 
-- `shuttle` is used for interacting with the NEW **shuttle.dev** platform.
-- `cargo shuttle` is used for interacting with the **shuttle.rs** platform.
+- `shuttle` is used for interacting with the **shuttle.dev** platform.
+- ~~`cargo shuttle` is used for interacting with the **shuttle.rs** platform.~~
 
-This documentation covers the NEW **shuttle.dev** platform.
-Go to [docs.shuttle.rs](https://docs.shuttle.rs) to view the docs for the shuttle.rs platform.
+This documentation covers the **shuttle.dev** platform.
 </Warning>
