--- a/introduction/docs.mdx
+++ b/introduction/docs.mdx
@@ -4,11 +4,9 @@ description: "Begin your Shuttle journey with our comprehensive documentation. L
 icon: "hand-wave"
 ---
 
-<Card title="New platform (Public Preview)" icon="layer-group" href="/platform-update/platform-update">
-  Shuttle is launching the new and improved version of our platform. Click to read more!
+<Card title="New platform" icon="layer-group" href="/platform-update/platform-update">
+  Shuttle has launched a new and improved version of the platform. Click to read more!
 </Card>
-
-###
 
 <CardGroup>
   <Card
