fix: typo in how-shuttle-works

--- a/introduction/how-shuttle-works.mdx
+++ b/introduction/how-shuttle-works.mdx
@@ -68,7 +68,7 @@ For more info on resources, head on over to our [Resources](/resources/resources
 ## Deploying your Project
 
 When you run `shuttle deploy`, your project code is archived and sent to our platform where it is built into a Docker image.
-Your service is then be started on Shuttle's infrastructure on AWS in London (eu-west-2).
+Your service will then be started on Shuttle's infrastructure on AWS in London (eu-west-2).
 The generated code from `shuttle_runtime::main` handles resource provisioning and initialization, leaving you to focus on what matters.
 
 {/* TODO? ## More reading */}
