feat: telemetry docs
---------

Co-authored-by: Joshua Mo <102877324+joshua-mo-143@users.noreply.github.com>

--- a/_snippets/pro-feature.mdx
+++ b/_snippets/pro-feature.mdx
@@ -1,1 +1,1 @@
-<Note>This page is about features available in the [Shuttle Pro Tier](https://www.shuttle.dev/pricing).</Note>
+<Note>This page is about features available in the [Shuttle Pro Tier](https://www.shuttle.dev/pricing) and above.</Note>
