fix: betterstack host

--- a/docs/telemetry/betterstack.mdx
+++ b/docs/telemetry/betterstack.mdx
@@ -19,14 +19,14 @@ Once you've chosen a name for your new telemetry source, click the OpenTelemetry
 
 Then, scroll *all the way* to the bottom of the page and hit the "connect source" button.
 
-Next, grab the source token from the new menu (click on the field to copy the value).
+## Configure a Shuttle project
+
+Locate the source token and ingestion host on the Source configuration page (click on a field to copy the value).
 
 ![image.png](/images/telemetry/betterstack3.png)
 
-## Configure a Shuttle project
-
 Next, navigate to your Shuttle project you want to enable telemetry for in the Shuttle Console, then the "Telemetry" tab, then click to enable Better Stack.
-Paste your source token, then click "Apply".
+Paste your source token and ingestion host, then click "Apply".
 
 <Warning>
     **Reminder**: If your project was already running when you clicked "Apply", you'll need to redeploy it before telemetry will start to flow.
