--- a/docs/telemetry/overview.mdx
+++ b/docs/telemetry/overview.mdx
@@ -21,7 +21,7 @@ Under the hood, Shuttle runs an OpenTelemetry (OTel) collector alongside your se
 
 - All system metrics
 - All application metrics
-- All application logs
+- All application logs (tracing/log events, not stdout/stderr output)
 - No export limits
 
 ## How to get started?
