--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -59,6 +59,7 @@ For more tips, see [Local Run](/docs/local-run).
 - `shuttle run --port 8080 --external`: Expose to local network by listening on `0.0.0.0`.
 - `shuttle run --secrets <file>`: Use a non-default secrets file for this run.
 - `shuttle run --release`: Compile with release mode.
+- `shuttle run --bacon`: Run in watch mode, requires separate install of [bacon](https://github.com/Canop/bacon).
 
 ### Deploy a project
 
