--- a/docs/files.mdx
+++ b/docs/files.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Deployment files"
-description: "How to handle files and folder for deployment"
+description: "How to add or ignore files in Shuttle deployments"
 icon: "files"
 ---
 
@@ -12,11 +12,13 @@ This page answers:
 - What happens to files after I deploy?
 - What happens to files that I write to disk?
 
-## Files uploaded in deployment
+## Files uploaded to the build stage
 
-When you run `shuttle deploy`, all source files in your cargo workspace that are not ignored by `.gitignore` or `.ignore` rules are packed into a zip archive and uploaded to Shuttle, where they are then extracted, built, and hosted.
+When you run `shuttle deploy`, all source files in your cargo workspace that are not ignored are packed into a zip archive and uploaded to Shuttle, where they are then extracted and built.
 
-<Info>The deployment POST request (after archive compression) has a size limit of 100 MB.</Info>
+<Info>The archive POST request (after compression) has a size limit of 100 MB.</Info>
+
+<Warning>To access files at runtime, they need to be copied from the build stage. Read more below.</Warning>
 
 ### Ignore files
 
@@ -24,10 +26,10 @@ Ignoring files can be done by adding rules to `.gitignore` or `.ignore` files, d
 
 ### Include ignored files
 
-If you have ignored files that you want to include in the deployment upload, declare those files in the `Shuttle.toml` file in the root of your workspace:
+If you have ignored files that you want to include in the upload to the build stage, declare those files in the `Shuttle.toml` file in the root of your workspace:
 
 ```toml Shuttle.toml
-# Declare ignored files that should be included in deployment:
+# Declare ignored files that should be included in the upload:
 [deploy]
 include = [
   "file.txt", # include file.txt
@@ -38,9 +40,9 @@ include = [
 
 <Note>Specifying only a folder name, like `"static"`, does not work. Use `"static/*"` instead to include its contents.</Note>
 
-### Debug deployment files
+### Debug included files
 
-You can double check which files are included in your deployment by turning on detailed logging:
+You can double check which files are included in your archive by turning on detailed logging:
 
 ```bash
 shuttle deploy --debug
@@ -61,15 +63,13 @@ If you want the `deploy` command to exit if there are uncommitted git changes:
 deny_dirty = true
 ```
 
-## Build assets
+## Add files to the runtime image
 
-Serving a web project often means that there are static HTML, CSS, or JavaScript files to serve.
-
-To serve them on Shuttle, make sure they are included in the deployment (if they are gitignored, see above).
-Then, add `[build]` configuration in `Shuttle.toml` to copy them from the builder to the final runtime image:
+To make your files available at runtime such as config files, static web files etc, they need to be copied into the runtime image at the end of the build stage.
+To do this, declare them as build assets in the `[build]` configuration in `Shuttle.toml`.
 
 ```toml Shuttle.toml
-# Declare files that should be moved to the runtime container:
+# Declare files that should be copied to the runtime image:
 [build]
 assets = [
   "file.txt", # include file.txt
@@ -78,10 +78,8 @@ assets = [
 ]
 ```
 
-Lastly, set up your project's web framework to serve them from their directory.
+An example on how to upload and serve static files with Axum can be found [here](https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/static-files).
 
-An example on how to do this with Axum can be found [here](https://github.com/shuttle-hq/shuttle-examples/tree/main/axum/static-files).
+## Files in the runtime container
 
-## Files at runtime
-
-You app can use the file system like normal, but files in the deployment container are deleted after the deployment shuts down.
+You app can use the file system like normal, but files in the deployment container are deleted after the deployment stops.
