--- a/docs/local-run.mdx
+++ b/docs/local-run.mdx
@@ -59,21 +59,17 @@ Here are some small tips and tricks to boost your productivity when developing l
 
 ### Live reload backend with `bacon`
 
-To live reload your Shuttle app when you save a file, you can use [bacon](https://github.com/Canop/bacon):
+To live reload your Shuttle app when you save a file, you can install [bacon](https://github.com/Canop/bacon) and then use
 
 ```bash
-bacon -j shuttle --config-toml '
-[jobs.shuttle]
-command = ["shuttle", "run"]
-need_stdout = true
-allow_warnings = true
-background = false
-on_change_strategy = "kill_then_restart"
-kill = ["pkill", "-TERM", "-P"]'
+shuttle run --bacon
 ```
-Bacon works with jobs and this command tells bacon to run a job called `shuttle` which we define in the inline toml file within single quotes.
+
+to run Shuttle's default bacon job.
 The job tells bacon to execute `shuttle run` when you save a file.
-There are many other helpful options, see `bacon --help` or the [bacon website](https://dystroy.org/bacon/) for more info.
+
+To customize this behavior, you can set up your own jobs in `bacon.toml`.
+Shuttle's default bacon config can be found [here](https://github.com/shuttle-hq/shuttle/tree/main/cargo-shuttle/src/util).
 
 ### Live reload backend with `cargo watch`
 
