--- a/guides/migrate-shared-postgres.mdx
+++ b/guides/migrate-shared-postgres.mdx
@@ -1,16 +1,17 @@
 ---
-title: Migrate Shared Postgres
-description: Migrate Postgres data from shuttle.rs to shuttle.dev
+title: Migrate Postgres Data
+description: Migrate Postgres data to shuttle.dev
 icon: dove
 ---
 
-This guide shows how to dump schemas and table data from a [Shared Postgres](/resources/shuttle-shared-db) database on **shuttle.rs**, and upload them to **shuttle.dev**.
+This guide shows how to restore schemas and table data in a Shuttle database.
+Dumping data is a planned feature.
 
 If you encounter issues, feel free to [contact us](/support/support) for help.
 
 ## Prerequisites
 
-To run the data upload against the new database, you need a Postgres Client.
+To run the data upload against the database, you need a Postgres Client.
 In this guide, we will use `psql`.
 On Debian/Ubuntu, you can install it with:
 
@@ -19,9 +20,10 @@ sudo apt install postgresql-client
 ```
 
 <Warning>
-The shared database on shuttle.dev has Postgres version 16, so `psql` versions older than 16 might not work.
+Shuttle Postgres databases run Postgres version 16, so `psql` versions older than 16 might not work.
 </Warning>
 
+{/*
 ## 1. Deploy and provision Shared Postgres on shuttle.dev
 
 Follow [Platform Migration](/platform-update/migration) to deploy your app to **shuttle.dev**, including the provisioning of the database resource.
@@ -74,8 +76,9 @@ The max size for the dump is 50 MB. If you get errors about request limits, reac
 
 You can inspect the file and edit it to your liking.
 If you already let your schema migrations run in the new db, you could for instance remove the `CREATE TABLE`, `ALTER TABLE` etc, and only keep the table data `COPY` statements and so on.
+*/}
 
-## 5. Restore data on shuttle.dev
+## Restore data from a SQL file
 
 Use the following command to get the connection string for the new database:
 
@@ -86,7 +89,7 @@ shuttle resource list --show-secrets
 Use psql to run the dump file against it:
 
 ```sh
-psql -d <connection string> -f /tmp/dump.sql
+psql -d <connection string> -f filename.sql
 ```
 
 You might see various errors about tables, rows, or constraints already existing in the new database.
@@ -95,15 +98,3 @@ In most cases this is fine, but you can verify that everything looks good by con
 ```sh
 psql <connection string>
 ```
-
-If something has gone wrong, you can cancel the migration for now and deploy the service on **shuttle.rs** again.
-
-## Final steps
-
-If you are happy with the migration to the new platform, you can shut down the old project's container (no need to delete the project):
-
-```sh
-cargo shuttle project stop
-```
-
-If you don't want to keep the SQL dump file on disk, remember to delete it.
