--- a/guides/upgrade.mdx
+++ b/guides/upgrade.mdx
@@ -4,7 +4,7 @@ description: "How to upgrade to newer Shuttle versions"
 icon: "code-merge"
 ---
 
-1. Check the [release page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.
+1. Check the [Releases page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.
 
 2. Upgrade your Shuttle CLI with one of the options below:
    - `shuttle upgrade` **(available in v0.48.0+)** (runs the install script below for you)
@@ -15,7 +15,7 @@ icon: "code-merge"
 
 3. Update your project's Shuttle dependencies in `Cargo.toml`:
    ```toml Cargo.toml
-   shuttle-runtime = "0.52.0"
+   shuttle-runtime = "0.53.0"
    # do the same for other shuttle dependencies
    ```
 
