--- a/support/support.mdx
+++ b/support/support.mdx
@@ -8,7 +8,7 @@ There are 3 ways to contact the Shuttle team and get support:
 
 - **Intercom chat**: Click the chat button at the bottom right on any of our websites.
 - **Discord server**: [discord.gg/shuttle](https://discord.gg/shuttle)
-  - On the Pro Tier, you get access to a private support channel where you can ask Shuttle engineers for help directly.
+  - On the Pro Tier and above, you get access to a private support channel where you can ask Shuttle engineers for help directly.
 - **Email**: [support@shuttle.rs](mailto:support@shuttle.rs)
   - When contacting us for project or account removal, please use the email address associated with your GitHub account.
 
