--- a/pricing/scaling.mdx
+++ b/pricing/scaling.mdx
@@ -27,7 +27,7 @@ Simply upgrade your instance size and pay the difference. Each instance size com
 
 ## Horizontal scaling
 
-Growth tier users can create replicas of their applications to distribute traffic and increase availability. Each replica is billed based on its instance size and vCPU usage per hour.
+Growth tier users can configure a single project to run on multiple instances and have Shuttle seamlessly load balance traffic across them for higher scalability and availability. Each replica instance is billed based on its instance size and vCPU usage per hour.
 
 ## Purchase additional projects
 
