--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -6,27 +6,37 @@ icon: users
 
 <Snippet file="growth-feature.mdx" />
 
-Shuttle teams enables you to supercharge your team's productivity by sharing projects with your team members and centralize billing.
-
 <Info>The teams feature is in beta and will be receiving updates.</Info>
+
+Shuttle teams enables you to supercharge your team's productivity by sharing projects with your team members and centralize billing.
 
 ## Features
 
 Your team can be managed on the Shuttle Console under **Account -> Team**.
+Currently, only the team owner can manage the team.
 
-### Invite Members
+### Members
 
-Team members can be invited via email.
-The email address the invite is sent to must match the 
+The team owner can invite team members via email.
+
+<Note>The invited user must sign in to Shuttle using the same email address you provide.</Note>
+
+There are by default 10 seats in a team. Additional team seats can be purchased.
 
 ### Projects
 
 Currently, all of the team owner's projects are shared with all team members.
 
+To collaborate on a new project within the team, the team owner must create the project.
+
+Both of the limitations above will soon go away.
+
 <Note>Using `--name` in the CLI will prioritise Personal projects with that name over team projects. Using `--id` or linking the local directory ensures that the correct project is always targetted.</Note>
 
 ### Roles
 
+The team member roles that exist so far are:
+
 - **Owner:** Admin access to all team projects and can delete team projects.
 - **Admin:** Admin access to all team projects.
-- **Member (coming soon):** Basic read-only access to all team projects.
+{/* - **Member (coming soon):** Basic read-only access to all team projects. */}
