--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -18,7 +18,7 @@ Accounts on different providers with matching emails are not automatically linke
 
 ## Account Tiers
 
-There are three Shuttle account tiers: Community, Pro, and Team.
+There are four Shuttle account tiers: Community, Pro, Growth, and Enterprise.
 Check the [Pricing page](https://www.shuttle.dev/pricing) for more information.
 
 ## API Key
