--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -4,9 +4,7 @@ description: How Shuttle Teams work
 icon: users
 ---
 
-<Snippet file="growth-feature.mdx" />
-
-Shuttle Teams is an exclusive feature to Growth tier users, enabling you to supercharge your team's productivity, share projects within your team and centralize billing.
+Shuttle Teams is a feature exclusive to [Growth Tier](https://www.shuttle.dev/pricing) users, enabling you to supercharge your team's productivity, share projects within your team, and centralize billing.
 
 ## Features
 
