--- a/pricing/scaling.mdx
+++ b/pricing/scaling.mdx
@@ -16,7 +16,7 @@ Simply upgrade your instance size and pay the difference. Each instance size com
 
 | Instance Size | vCPU | Memory (GB) | Included vCPU | Billable vCPU |
 | --- | --- | --- | --- | --- |
-| **Basic** | 0.25 | 512 | 0.25 | 0 |
+| **Basic** | 0.25 | 0.5 | 0.25 | 0 |
 | **Small** | 0.5 | 1 | 0.25 | 0.25 |
 | **Medium** | 1 | 2 | 0.25 | 0.75 |
 | **Large** | 2 | 4 | 0.25 | 1.75 |
@@ -33,7 +33,7 @@ Growth tier users can configure a single project to run on multiple instances an
 
 Pro, Growth and Enterprise users can purchase additional projects beyond their included projects. The minimum instance for each additional project is 0.5 vCPU and is billed according to the table below.
 
-| Instance Size | vCPU | Memory GB | Included vCPU | Billable vCPU |
+| Instance Size | vCPU | Memory (GB) | Included vCPU | Billable vCPU |
 | --- | --- | --- | --- | --- |
 | **Small** | 0.5 | 1 | 0 | 0.5 |
 | **Medium** | 1 | 2 | 0 | 1 |
