--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -13,8 +13,10 @@ This section is aimed at collecting common issues users have to provide quick de
   <Accordion title="I get os error 2 when trying to load up my project">
     This is most likely to happen if you're using one of our shared database annotations. To prevent this from happening, ensure that Docker is running.
 
-    If you've installed Docker via Docker Desktop, you must ensure that Docker Desktop is running.
-    If you are using Podman, ensure Podman is running (and that your Docker socket has been set up correctly).
+    Check [Docker engines](/docs/local-run#docker-engines) for more info.
+  </Accordion>
+  <Accordion title="libpq.so.5: cannot open shared object file">
+    Some Postgres libraries need `libpq` installed at runtime. To install it on Shuttle, add a [`shuttle_setup_container.sh`](/docs/builds#experimental-hook-scripts) with `apt update && apt install -y libpq-dev`.
   </Accordion>
   <Accordion title="I get mismatched dependencies between one of my dependencies and Shuttle crate dependencies!">
     This is likely because you are a using a different version of the dependency than the Shuttle crate, causing a dependency mismatch.
