--- a/docs/telemetry/overview.mdx
+++ b/docs/telemetry/overview.mdx
@@ -8,27 +8,38 @@ description: How Shuttle Telemetry integrations work
 
 Under the hood, Shuttle runs an OpenTelemetry (OTel) collector alongside your service that, once configured, sends project telemetry like vCPU and RAM usage as well as any custom metrics you define to a supported third-party integration of your choice.
 
-## What's included?
+## Quick Start
 
-### Community Tier - Export essential system metrics
+To get started with telemetry in your Shuttle project, follow our [step-by-step guide](./getting-started).
 
-- CPU usage
-- Memory usage
-- Network I/O
-- Disk I/O
+## Available Telemetry
 
-### Pro & Growth Tiers - Export everything
+### Community Tier - Container Metrics
 
-- All system metrics
-- All application metrics
-- All application logs (tracing/log events, not stdout/stderr output)
-- No export limits
+The Community tier includes essential container metrics that help you monitor your application's resource usage:
 
-## How to get started?
+| Category | Metrics |
+| --- | --- |
+| **CPU** | - CPU cores available<br>- Online/active CPUs<br>- Reserved CPU resources<br>- CPU usage in kernel/user mode<br>- System-wide CPU usage<br>- vCPU usage and utilization |
+| **Memory** | - Reserved memory<br>- Memory usage and limits<br>- Maximum memory usage<br>- Memory utilization |
+| **Network** | - Ingress/egress bytes and packets<br>- Dropped packets<br>- Error counts<br>- Network rates (bytes/s) |
+| **Storage** | - Bytes read from disk<br>- Bytes written to disk |
 
-Check out the tutorials for each supported telemetry service:
+### Pro & Growth Tiers - Everything
 
-- [Better Stack](./betterstack)
+Upgrade to Pro or Growth tier to unlock:
+
+1. **All Container Metrics** - Everything from the Community tier
+2. **Application Metrics** - Track your application's behavior with [custom metrics](./custom-metrics)
+3. **Application Logs** - Export tracing events and logs (not stdout/stderr)
+4. **No Export Limits** - Send as much data as you need
+
+## Supported Providers
+
+Currently, Shuttle supports the following telemetry providers:
+
+- [Better Stack](./betterstack) - Recommended for most users
+- More providers coming soon!
 
 <Note>
     We plan to expand the list of supported third party services.
@@ -37,36 +48,13 @@ Check out the tutorials for each supported telemetry service:
 
 ---
 
-## Guide: Add custom metrics in tracing events
+## Custom Metrics and Tracing
 
-<Note>Exporting custom metrics and logs is available in the [Shuttle Pro Tier](https://www.shuttle.dev/pricing) and above.</Note>
+Learn how to add custom metrics and tracing events to your application in our [Custom Metrics Guide](./custom-metrics).
 
-To use custom metrics in tracing, start by adding the tracing dependency if you haven't yet.
+## Example Trace Output
 
-```bash
-cargo add tracing
-```
-
-Then, all you need to do is add some tracing events with fields to the functions you're using, like so:
-
-```rust
-async fn hello_world() -> &'static str {
-    tracing::info!(counter.hello = 1, "Hello world from OTel!");
-    "Hello, world!"
-}
-```
-
-Doing this will send an `info` level log to stdout and the OTel exporter, saying `Hello world from OTel!`.
-The log object produced will then have the custom attribute set. An example is provided below.
-
-The runtime's OTel exporter uses `tracing-opentelemetry` under the hood, which automatically handles three metric types for you: monotonic counters, counters and histograms.
-You can find more about this [on the `tracing-opentelemetry` docs](https://docs.rs/tracing-opentelemetry/latest/tracing_opentelemetry/struct.MetricsLayer.html).
-
-## Default telemetry properties
-
-### Traces
-
-This is an example of what a JSON object for a tracing event looks like:
+Here's what a tracing event looks like when exported:
 
 ```json
 {
@@ -96,36 +84,3 @@ This is an example of what a JSON object for a tracing event looks like:
     "source_type": "opentelemetry"
 }
 ```
-
-### Platform telemetry
-
-Below is a list of container metrics that Shuttle sends by default over the OpenTelemetry export.
-
-| Attribute name | Description |
-| --- | --- |
-| cpu_cores | CPU cores available |
-| cpu_onlines | Number of online/active CPUs |
-| cpu_reserved | Reserved CPU resources (if any) |
-| cpu_usage_kernelmode | CPU time spent in kernel mode (nanos) |
-| cpu_usage_system | System-wide CPU usage (nanos) |
-| cpu_usage_total | Total CPU time usage (nanos) |
-| cpu_usage_usermode | CPU time spent in user mode (nanos) |
-| cpu_usage_vcpu | vCPU usage |
-| cpu_utilized | Percentage of CPU utilized |
-| memory_reserved | Memory reserved (bytes) |
-| memory_usage | Memory used (bytes) |
-| memory_usage_limit | Memory limit (bytes) |
-| memory_usage_max | The max amount of memory used by your application (bytes) |
-| memory_utilized | Memory being utilised (bytes) |
-| network_io_usage_rx_bytes | Network ingress (bytes) |
-| network_io_usage_rx_packets | Network ingress packet count |
-| network_io_usage_rx_dropped | Network ingress dropped packet count |
-| network_io_usage_rx_errors | Network ingress errored packet count |
-| network_io_usage_tx_bytes | Network egress (bytes) |
-| network_io_usage_tx_packets | Network egress packet count |
-| network_io_usage_tx_dropped | Network egress dropped packet count |
-| network_io_usage_tx_errors | Network egress errored packet count |
-| network_rate_rx | Network ingress rate (bytes/s) |
-| network_rate_tx | Network egress rate (bytes/s) |
-| storage_read_bytes | Bytes read from disk |
-| storage_write_bytes | Bytes written to disk |
