--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting Started with Telemetry
+title: Getting Started
 icon: rocket
 description: Step-by-step guide to setting up telemetry in your Shuttle project
 ---
@@ -11,7 +11,7 @@ This guide will walk you through setting up telemetry for your Shuttle project. 
 Before you begin, make sure you have:
 1. A Shuttle project deployed
 2. Access to the Shuttle Console
-3. An account with your chosen telemetry provider (e.g., Better Stack)
+3. An account with your chosen telemetry provider (e.g. Better Stack)
 
 ## Step 1: Enable the OpenTelemetry Exporter
 
@@ -51,7 +51,7 @@ Follow the specific guide for your chosen provider to:
 ## Next Steps
 
 Once your telemetry is set up, you can:
-- [Add custom metrics](./overview#guide-add-custom-metrics-in-tracing-events) to your application
+- [Add custom metrics](./custom-metrics) to your application
 - Create dashboards in your provider's interface
 - Monitor your application's performance and health
 
