--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -26,6 +26,7 @@ The `shuttle-runtime` entry in your project's `Cargo.toml` should now look somet
 ```toml
 shuttle-runtime = { version = "0.53.0", features = ["setup-otel-exporter"] }
 ```
+> **Note:** Your specific entry may not be *identical*, that's OK. The important part is that `"setup-otel-exporter"` appears in the `features` array.
 
 ## Step 2: Choose Your Telemetry Provider
 
