--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -35,6 +35,11 @@ Shuttle supports several telemetry providers. Each has its own setup process:
 - [Better Stack](./betterstack) - Recommended for most users
 - More providers coming soon!
 
+<Note>
+    We plan to expand the list of supported third party services.
+    Let us know you thoughts and suggestions on [GitHub](https://github.com/shuttle-hq/shuttle/discussions/1980).
+</Note>
+
 ## Step 3: Configure Your Provider
 
 Follow the specific guide for your chosen provider to:
