--- a/docs/telemetry/getting-started.mdx
+++ b/docs/telemetry/getting-started.mdx
@@ -50,7 +50,7 @@ Follow the specific guide for your chosen provider to:
 ## Step 4: Redeploy Your Project
 
 <Warning>
-    **Important**: After configuring telemetry, you must redeploy your project for the changes to take effect.
+    **Important**: After configuring telemetry, you **_must_** redeploy your project for the changes to take effect.
     You can do this by selecting your latest deployment in the Shuttle Console and clicking "Redeploy".
 </Warning>
 
