better stack troubleshooting fix

--- a/docs/telemetry/betterstack.mdx
+++ b/docs/telemetry/betterstack.mdx
@@ -81,6 +81,6 @@ For a complete list of available metrics, see our [telemetry overview](./overvie
 
 If you don't see data in Better Stack:
 1. Verify your source token and ingestion host are correct
-2. Ensure you've redeployed your project after enabling telemetry
-3. Check that your project has the `setup-otel-exporter` feature enabled
+2. Check that your project has the `setup-otel-exporter` feature on `shuttle-runtime` enabled
+3. Ensure you've redeployed your project after enabling telemetry
 4. Contact [Better Stack support](https://betterstack.com/contact) or join our [Discord community](https://discord.gg/shuttle) for help
