fix: broken link

--- a/docs/telemetry/betterstack.mdx
+++ b/docs/telemetry/betterstack.mdx
@@ -75,7 +75,7 @@ Better Stack will receive all the standard Shuttle telemetry metrics, including:
 - Disk I/O statistics
 - Custom metrics from your application
 
-For a complete list of available metrics, see our [telemetry overview](./overview#platform-telemetry).
+For a complete list of available metrics, see our [telemetry overview](./overview#default-platform-metrics).
 
 ## Troubleshooting
 
