add installation telemetry snippet

--- a/getting-started/installation.mdx
+++ b/getting-started/installation.mdx
@@ -25,6 +25,8 @@ Or on Windows with:
 iwr https://www.shuttle.dev/install-win | iex
 ```
 
+<Snippet file="telemetry.mdx" />
+
 ### Pre-built binary
 
 Pre-built binaries of the Shuttle CLI for most platforms can be found on [our GitHub](https://github.com/shuttle-hq/shuttle/releases/latest).
