--- a/_snippets/telemetry.mdx
+++ b/_snippets/telemetry.mdx
@@ -1,4 +1,4 @@
-The install script collects anonymous telemetry data to help improve the product. You can opt out by setting any of these environment variables to a truthy value:
+The install script collects anonymous telemetry data to help improve the product. You can opt out by setting any of these environment variables to `1` or `true`:
 
 - `DO_NOT_TRACK`
 - `DISABLE_TELEMETRY`
